--- a/doc/sshping.pod
+++ b/doc/sshping.pod
@@ -15,7 +15,8 @@ and file transfer throughput.  It's pronounced "shipping".
 
 user
     Username for the login to the remote system.
-    If omitted, it defaults to the current username on the local system.
+    If omitted, it defaults to the current username on the
+    local system.
 
 addr
     IP name or address of the target system.
@@ -57,11 +58,13 @@ Short and long forms of options take the same arguments as shown.
     Run these tests e=echo s=speed; default es=both
 
 -s, --size MB
-    For transfer speed test (the scp test), send MB megabytes; default=8 MB
+    For transfer speed test (the scp test), send MB megabytes; 
+    default=8 MB
 
 -t, --time SECS
-    Time limit for echo test.  We'll stop the test soon after this number of
-    seconds, or the --couont number of characters, whichever comes first.
+    Time limit for echo test.  We'll stop the test soon after 
+    this number of seconds, or the --couont number of characters, 
+    whichever comes first.
     Timing starts after the ssh login and shell creation.
 
 -v, --verbose
@@ -77,13 +80,14 @@ Short and long forms of options take the same arguments as shown.
 
 =head2 Connection
 
-ssh Login Time
-    Time in nanoseconds to establish the tcp network connection, authenticate, 
-    and form the ssh session, then start an ssh channel, launch a remote shell,
-    login to the remote system and read back any logon banners. 
+ssh-Login-Time
+    Time in nanoseconds to establish the tcp network connection, 
+    authenticate, and form the ssh session, then start an ssh 
+    channel, launch a remote shell, login to the remote system 
+    and read back any logon banners. 
 
-    If an interactive password is needed to login, the time to supply the password 
-    is included as well - so type fast!
+    If an interactive password is needed to login, the time to supply 
+    the password is included as well - so type fast!
 
 =head2 Character Echo Tests
 
@@ -93,26 +97,30 @@ is correct, then notes the wallclock time elapsed for the round-trip.
 This is repeated with a different character until either the test time limit
 is expired or the character count limit is reached.
 
-Since only a subset of the printable ASCII character set is used, bytes == characters.
+Since only a subset of the printable ASCII character set is used, 
+bytes == characters.
 
-Minimum Latency
-    Fastest (lowest) round-trip time for a character echo, in nanoseconds.
+Minimum-Latency
+    Fastest (lowest) round-trip time for a character echo, 
+    in nanoseconds.
 
-Median Latency
+Median-Latency
     The median round-trip time for a character echo.  The median is
-    not the same as the average; think of this as the "typical" latency.
-    You probably want this number when you think average.
+    not the same as the average; think of this as the "typical" 
+    latency.  You probably want this number when you think average.
 
-    The standard deviation is also shown.  Yes, it can be greater than
-    the median!
+    The standard deviation is also shown.  Yes, it can be greater
+    than the median!
 
-Average Latency
-    The average (mean) round-trip time for a character echo, in nanoseconds.
+Average-Latency
+    The average (mean) round-trip time for a character echo, 
+    in nanoseconds.
 
-Maximum Latency
-    The slowest (highest) round-trip time for a character echo, in nanoseconds.
+Maximum-Latency
+    The slowest (highest) round-trip time for a character echo, 
+    in nanoseconds.
 
-Echo count
+Echo-Count
     The number of bytes echoed during the test.
 
 =head2 Transfer Speed Test
@@ -122,28 +130,28 @@ in bytes per second (Bps) of the scp subsystem.  This is the
 subsystem typically used when copying files over ssh.
 
 The test creates a random 1MB file then copies it to
-the target system, measuring the time required for the transfer.
-The file is repeatedly copied to get transfer sizes greater 
-than 1MB.
+the target system ("uploads" it), measuring the time required
+for the transfer.  The file is repeatedly copied to get transfer 
+sizes greater than 1MB.
 
-Transfer Size
+Transfer-Size
     Number of bytes transferred during the test.
 
-Transfer Rate
+Upload-Rate
     Throughput speed for the file transfer, in Bytes/second.
 
 
 =head1 EXAMPLES
 
     # bin/sshping -d cheyenne.example.com
-    ---  ssh Login Time: 4,286,336,535 nsec
-    --- Minimum Latency:   134,679,785 nsec
-    ---  Median Latency:   139,936,318 nsec  +/- 20,996,458 std dev
-    --- Average Latency:   145,943,038 nsec
-    --- Maximum Latency:   254,836,720 nsec
-    ---      Echo count:         1,000 Bytes
-    ---   Transfer Size:     8,000,000 Bytes
-    ---   Transfer Rate:       250,622 Bytes/second
+    ssh-Login-Time:   1,730,431,639 nsec
+    Minimum-Latency:        836,491 nsec
+    Median-Latency:       1,006,323 nsec  +/- 165,214 std dev
+    Average-Latency:      1,026,238 nsec
+    Maximum-Latency:      4,090,103 nsec
+    Echo-Count:               1,000 Bytes
+    Transfer-Size:        8,000,000 Bytes
+    Upload-Rate:          5,044,247 Bytes/second
 
 
 =head1 AUTHOR
@@ -152,7 +160,7 @@ Written by Uncle Spook.  https://github.com/spook/sshping
 
 =head1 LICENSE
 
-Copyright (c) 2017 by Uncle Spook
+Copyright (c) 2017-2018 by Uncle Spook
 
 MIT License
 
