--- a/doc/sshping.pod
+++ b/doc/sshping.pod
@@ -109,12 +109,16 @@ Median-Latency
     not the same as the average; think of this as the "typical" 
     latency.  You probably want this number when you think average.
 
-    The standard deviation is also shown.  Yes, it can be greater
-    than the median!
-
 Average-Latency
     The average (mean) round-trip time for a character echo, 
     in nanoseconds.
+
+Average-Deviation
+    The standard deviation on the average latency.  It quantifies
+    how varied the latency is for each character's echo.  A lower
+    number indicates a tighter grouping of latencies, a 
+    higher number indicates more variation in the latencies.
+    "One" standard deviation is the average plus or minus this amount.
 
 Maximum-Latency
     The slowest (highest) round-trip time for a character echo, 
@@ -144,14 +148,15 @@ Upload-Rate
 =head1 EXAMPLES
 
     # bin/sshping -d cheyenne.example.com
-    ssh-Login-Time:   1,730,431,639 nsec
-    Minimum-Latency:        836,491 nsec
-    Median-Latency:       1,006,323 nsec  +/- 165,214 std dev
-    Average-Latency:      1,026,238 nsec
-    Maximum-Latency:      4,090,103 nsec
-    Echo-Count:               1,000 Bytes
-    Transfer-Size:        8,000,000 Bytes
-    Upload-Rate:          5,044,247 Bytes/second
+    ssh-Login-Time:    1,733,748,227 nsec
+    Minimum-Latency:         847,107 nsec
+    Median-Latency:          996,029 nsec
+    Average-Latency:         992,186 nsec
+    Average-Deviation:        67,079 nsec
+    Maximum-Latency:       1,289,470 nsec
+    Echo-Count:                1,000 Bytes
+    Transfer-Size:         8,000,000 Bytes
+    Upload-Rate:           5,102,315 Bytes/second
 
 
 =head1 AUTHOR
